# Deep-learning

./: .env  README.md  app.py  pyproject.toml  requirements.txt
ThothPaddle/: __init__.py  ocr_engine.py
ai/: analyzis.py
gemini_io_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
llama_ai_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
